# nls

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  requirements.txt  setup.py
benchmark/: README.md  bench.py  benchmark.py
examples/: animate.py  solve1d.py  solve2d.py  visualize.py
nls/: __init__.py  animation.py  makefile  model.py  nls.f90  nls.f95  pumping.py  solver.py  version.py
schedulr/: README.md  schedulr.py  schema.sql  workr.py
schedulr/static/: api.js  jquery.js  jquery.min.js  style.css
schedulr/templates/: index.tpl
src/: makefile  nls.f95  nls_test.py  solve.f95  solve1d.py  solve2d.py  visualize.py
src/nls/: __init__.py  animation.py  model.py  pumping.py  solver.py
test/: makefile  test_glue.py  test_nls.f95
test/nls/: __init___test.py
tools/: check.py
